@@ -2,6 +2,7 @@ version 2.5.17
 --------------
 Thanks to Calestyo for bug report and feedbacks, thanks to Mateusz
 Konieczny for feedback. Thanks to Felix Leimbach for bug report.
+Thanks to Blandon Ray for compilation problem report under Solaris
 
 version 2.5.16
 --------------
