@@ -309,13 +309,15 @@ namespace libdar
 						     buf.st_dev);
 #if HAVE_DOOR
 		else if(S_ISDOOR(buf.st_mode))
-		    ref = new (get_pool()) door(buf.st_uid, buf.st_gid, buf.st_mode & 07777,
-						atime,
-						mtime,
-						ctime,
-						name,
-						lieu,
-						buf.st_dev);
+		    ref = new (get_pool()) cat_door(buf.st_uid,
+						    buf.st_gid,
+						    buf.st_mode & 07777,
+						    atime,
+						    mtime,
+						    ctime,
+						    name,
+						    lieu,
+						    buf.st_dev);
 #endif
 		else
 		    throw Edata(string(gettext("Unknown file type! file name is: ")) + string(ptr_name));
