@@ -6,6 +6,7 @@ from 2.5.16 to 2.5.17
 - updated FAQ
 - fixed typo in dar man page
 - fixed bug met when writing slices to a read-only filesystem
+- fixed compilation problem under Solaris
 
 from 2.5.15 to 2.5.16
 - bug fix: while rechecking sparse file (-ah option) during a merging
